// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Format apex: BlockTrailingCommentAfterClass.cls: BlockTrailingCommentAfterClass.cls 1`] = `
class BlockTrailingCommentAfterClass { /* Block Comment */
  public BlockTrailingCommentsAfterClass() {}
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class BlockTrailingCommentAfterClass {
  /* Block Comment */
  public BlockTrailingCommentsAfterClass() {
  }
}

`;

exports[`Format apex: BlockTrailingCommentAfterEnum.cls: BlockTrailingCommentAfterEnum.cls 1`] = `
enum Season { /* Block Comment */

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
enum Season {
  /* Block Comment */
}

`;

exports[`Format apex: BlockTrailingCommentAfterInterface.cls: BlockTrailingCommentAfterInterface.cls 1`] = `
interface InlineTrailingCommentAfterInterface { // Inline Comment

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
interface InlineTrailingCommentAfterInterface {
  // Inline Comment
}

`;

exports[`Format apex: BlockTrailingCommentAfterTrigger.cls: BlockTrailingCommentAfterTrigger.cls 1`] = `
trigger InlineTrailingCommentAfterTrigger on Account(after insert) { /* Block Comment */

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
trigger InlineTrailingCommentAfterTrigger on Account(after insert) {
  /* Block Comment */
}

`;

exports[`Format apex: InlineTrailingCommentAferEnum.cls: InlineTrailingCommentAferEnum.cls 1`] = `
enum Season { // Inline Comment

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
enum Season {
  // Inline Comment
}

`;

exports[`Format apex: InlineTrailingCommentAfterClass.cls: InlineTrailingCommentAfterClass.cls 1`] = `
class InlineTrailingCommentsAfterClass { // Inline Comment
  public InlineTrailingCommentsAfterClass() {}
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
class InlineTrailingCommentsAfterClass {
  // Inline Comment
  public InlineTrailingCommentsAfterClass() {
  }
}

`;

exports[`Format apex: InlineTrailingCommentAfterInterface.cls: InlineTrailingCommentAfterInterface.cls 1`] = `
interface BlockTrailingCommentAfterInterface { /* Block Comment */

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
interface BlockTrailingCommentAfterInterface {
  /* Block Comment */
}

`;

exports[`Format apex: InlineTrailingCommentAfterTrigger.cls: InlineTrailingCommentAfterTrigger.cls 1`] = `
trigger InlineTrailingCommentAfterTrigger on Account(after insert) { // Inline Comment

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
trigger InlineTrailingCommentAfterTrigger on Account(after insert) {
  // Inline Comment
}

`;
